--- a/.gitattributes
+++ b/.gitattributes
@@ -21,6 +21,7 @@
 *.less text
 *.scss text
 LICENSE text
+Readme text
 
 # Declare files that will always have CRLF line endings on checkout.
 *.bat text eol=crlf
