Cross compile for Windows and macOS
Also cross compile for 386 architecture.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ language: go
 go:
   - '1.7.3'
 
+before_install:
+  - go get github.com/mitchellh/gox
+
+script:
+  - .travis/build.sh
+
 env:
   global:
-    - GOARCH=amd64
+    - OS_TARGETS="linux darwin windows"
+    - ARCH_TARGETS="386 amd64"
