--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,11 @@ install:
 script:
   - .travis/build.sh
 
+branches:
+  only:
+    - master
+    - /^(0|[1-9][0-9]*)\.(0|[1-9][0-9]*)([\.\-].*)?$/
+
 deploy:
   provider: releases
   api_key:
