--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ install:
 script:
   - .travis/build.sh
 
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+
 branches:
   only:
     - master
